--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>Lampa Prowlarr Plugin</title>
 </head>
 <body>
-    Redirecting...
+    <h1>Prowlarr Plugin for Lampa</h1>
+    <p>Use this URL in Lampa:</p>
+    <input type="text" value="https://myxdroz.github.io/lampa-prowlarr-plugin/plugin.js" readonly style="width:100%">
 </body>
 </html>
